--- a/src/main/asciidoc/wuic-documentation.adoc
+++ b/src/main/asciidoc/wuic-documentation.adoc
@@ -89,7 +89,8 @@ Finally, more advanced tutorials can be found link:advanced-tutorials.html[here]
 
 === References
 
-* <<reference.html#_supported_server_and_known_issues, Supported server and known issues>>
+* <<reference.html#_supported_server_and_known_issues,Supported server and known issues>>
+* <<reference.html#_error_codes,Error codes>>
 
 === API
 
