--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -648,6 +648,14 @@ In the `Parameter name` column bellow, replace the first `*` character from all 
         <td>true</td>
     </tr>
     <tr>
+        <td>*.facade.additionalBuilderConfiguratorClasses</td>
+        <td>
+            List of comma-separated class names extending http://wuic.github.io/apidocs/index.html?com/github/wuic/ContextBuilderConfigurator.html[ContextBuilderConfigurator]
+            that will be used in the facade.
+        </td>
+        <td>Empty string</td>
+    </tr>
+    <tr>
          <td>*.facade.wuicMultipleConfigInTagSupport</td>
          <td>For tag support (Thymeleaf, JSP, etc) : tell to parse the configuration every time the tag is run</td>
          <td>false</td>
