Guarantee nut order in heap declaration.
When a heap is created with a sequence or <heap> and <heap-id>, the order is now kept. If the user mix those elements with <nut-path>, warm him that any <nut-path> will be read before nuts retrieved from nested/referenced heaps.

--- a/src/main/asciidoc/api.adoc
+++ b/src/main/asciidoc/api.adoc
@@ -464,6 +464,9 @@ Inside a heap, you can refer an existing one with `heap-id` or declare a new hea
 </wuic>
 ----
 
+WARNING: nuts retrieved from `nut-path` are always read before nuts retrieved from nested and referenced heaps.
+If order matter, you should not mix `nut-path` with heaps and only use `heap` and `heap-id` to preserve order.
+
 === workflow-templates
 
 The workflow templates describe the way the nut could be processed.
